# tts-trainer

./: .gitignore  README.md  SPEAKER_SETUP.md  VOICE_CLUSTERING_WORKFLOW.md  archive_transcripts.py  main.py  manual_refs.txt  pyproject.toml  requirements.txt  run_transcription.sh  setup_cuda.py  setup_indextts.py  speaker_analysis.txt  test_indextts.py  test_voice_clustering.py
.cursor/rules/: background-music-removal-workflow.mdc  cross-platform-compatibility.mdc  data-regeneration-workflow.mdc  development-workflow.mdc  tts-trainer-architecture.mdc  wsl-terminal-workflow.mdc
config/: speaker_mapping.yaml
config/audio/: enhanced_preprocessing.yaml  preprocessing.yaml  segment_processing.yaml  speaker_diarization.yaml  voice_clustering.yaml
config/training/: character_training.yaml  xtts_finetune.yaml
docs/: IndexTTS_Implementation_Summary.md  IndexTTS_Migration_Plan.md  IndexTTS_Setup_Guide.md  TTS_TRAINING_GUIDE.md  background_music_removal_guide.md  deep_research_plan.md  implementation_roadmap.md  scripts_reference.md  voice_training_guide.md  voice_training_troubleshooting.md
notebooks/: data_exploration.ipynb
resources/voice_clusters/: speaker_mapping.json  voice_clustering_results.json
src/: __init__.py
src/discord_bot/: bot.py
src/models/: __init__.py  base_trainer.py
src/models/indextts/: __init__.py  indextts_trainer.py
src/models/xtts/: __init__.py  xtts_trainer.py
src/pipeline/: __init__.py  orchestrator.py
src/pipeline/stages/: audio_extractor.py  audio_preprocessor.py  audio_segment_processor.py  dataset_builder.py  enhanced_audio_preprocessor.py  model_trainer.py  speaker_segmenter.py  transcriber.py  video_processor.py  voice_clustering.py
src/pipeline/validators/: audio_quality.py  transcript_alignment.py
src/utils/: __init__.py  background_music_remover.py  file_utils.py  logging_utils.py
